welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:3: error: 'case' expected but '(' found.
    (c,_) if c<40 => false
    ^cigarParty:4: error: '}' expected but ';' found.
    (c,false) if c>60 => false
^cigarParty:4: error: ';' expected but 'if' found.
    (c,false) if c>60 => false
              ^cigarParty:8: error: eof expected but '}' found.
 }
 ^