welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
  (cigars,isWeekend) match {
    (c,_) if c<40 => false
    (c,false) if c>60 => false
    (_,_) => true
  }
}